Fixed stacked bomb jumps and "Change hitsound" button on Safari

--- a/src/index.styl
+++ b/src/index.styl
@@ -1089,7 +1089,7 @@ input:checked + .slider:before {
     margin-bottom: 1em;
     margin-left: 0.3em;
     font-size: 12px;
-    width: 9.4em !important;
+    width: 9.6em !important;
     height: 1.6em;
     overflow: hidden;
 
